--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ http://www.templatemo.com/tm-498-stimulus
                               
                               <h3 class="color-white">Follow me.</h3>
                               <p><i class="fa fa-github"></i> <a href="https://github.com/sangamsaisrivinay">sangamsaisrivinay</a></p>
-                              <p><i class="fa fa-linkedin"></i> <a href="#">sangamsaisrivinayreddy</a></p>
+                              <p><i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/sangam-sai-sri-vinay-r-77490b190">sangamsaisrivinayreddy</a></p>
 
                          </div>
 
