--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ http://www.templatemo.com/tm-498-stimulus
 
                <div class="col-md-12 col-sm-12">
                     <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s">
-                         <p>Copyright &copy; 2021 Your Company
+                         <p>Copyright &copy; 2021 
                     
                     | Design: <b>vinay</b></p>
                     <!--</div>
