--- a/index.html
+++ b/index.html
@@ -229,7 +229,15 @@ http://www.templatemo.com/tm-498-stimulus
                                    <p class="color-white">led a team of 6 people in ISB hackathon</p>
                               </div>
                          </div>
-
+                       div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
+                              <div class="media-object media-left">
+                                   <i class="fa fa-diamond"></i>
+                              </div>
+                              <div class="media-body">
+                                   <h3 class="media-heading">ACM member<small>2021 Feb-present</small></h3>
+                                   <p class="color-white">association for computer machinery</p>
+                              </div>
+                         </div>
                     </div>
                </div>
 
